--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -4,23 +4,30 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '30 5 * * *'
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: '3.x'
-        
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-      
+    
+    - name: Create .env file
+      run: |
+        echo "API_KEY=${{ secrets.API_KEY }}" >> .env
+        echo "API_SECRET=${{ secrets.API_SECRET }}" >> .env
+        echo "ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }}" >> .env
+        echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
+    
     - name: Run script
       run: python main.py
